# livekit-client-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Readme.md  vcpkg-configuration.json  vcpkg.json
cmake/: FindWebRTC.cmake
cmake/triplets/: x64-windows-v142.cmake  x64-windows-v143.cmake  x64-windows.cmake
examples/: CMakeLists.txt
examples/cpp_sample/: CMakeLists.txt  sample.cpp
examples/publish_audio/: CMakeLists.txt  publish_audio.cpp
examples/room_event/: CMakeLists.txt  room_event.cpp
include/livekit/core/: livekit_client.h  livekit_client_test.h  local_participant.h  peer_transport.h  remote_participant.h  room.h  room_event_interface.h  room_interface.h  rtc_engine.h
include/livekit/core/e2ee/: e2ee_manager.h  key_provider.h
include/livekit/core/option/: e2ee_option.h  media_option.h  option.h  room_option.h  rtc_engine_option.h  signal_option.h
include/livekit/core/participant/: local_participant_interface.h  participant_interface.h  remote_participant__interface.h
include/livekit/core/protostruct/: livekit_models_struct.h  livekit_rtc_struct.h
include/livekit/core/track/: audio_frame.h  audio_media_track.h  audio_media_track_interface.h  audio_source_interface.h  audio_stream_interface.h  audio_track.h  local_audio_track.h  local_publication.h  local_track.h  local_track_interface.h  local_track_publication.h  local_track_publication_interface.h  local_video_track.h  media_track_interface.h  publication.h  remote_audio_track.h  remote_publication.h  remote_track.h  remote_track_interface.h  remote_track_publication.h  remote_track_publication_interface.h  remote_video_track.h  track.h  track_factory.h  track_interface.h  track_publication.h  track_publication_interface.h  video_media_track.h  video_media_track_interface.h  video_track.h
src/: livekit_client.cpp
src/core/: livekit_client.cpp  livekit_client_test.cpp  room.cpp  room.h  rtc_engine.cpp
src/core/detail/: audio_device.cpp  audio_device.h  converted_proto.cpp  converted_proto.h  debouncer.cpp  debouncer.h  global_task_queue.cpp  global_task_queue.h  internals.cpp  internals.h  peer_transport.cpp  peer_transport.h  peer_transport_factory.cpp  peer_transport_factory.h  rtc_engine.cpp  rtc_engine.h  rtc_session.cpp  rtc_session.h  signal_client.cpp  signal_client.h  strings.h  timer.cpp  timer.h  uri.cpp  uri.h  utils.cpp  utils.h  websocket_client.cpp  websocket_client.h  websocket_data.cpp  websocket_data.h  websocket_uri.cpp  websocket_uri.h
src/core/e2ee/: e2ee_manager.cpp  key_provider.cpp
src/core/option/: defalut_option.cpp
src/core/participant/: local_participant.cpp  local_participant.h  participant.cpp  participant.h  remote_participant.cpp  remote_participant.h
src/core/track/: audio_source.cpp  audio_source.h  audio_track.cpp  audio_track.h  local_audio_track.cpp  local_audio_track.h  local_publication.cpp  local_track.cpp  local_track.h  local_track_publication.cpp  local_track_publication.h  local_video_track.cpp  local_video_track.h  media_stream_track.cpp  media_stream_track.h  remote_audio_track.cpp  remote_audio_track.h  remote_track.cpp  remote_track.h  remote_track_publication.cpp  remote_track_publication.h  remote_video_track.cpp  remote_video_track.h  track.cpp  track.h  track_factory.cpp  track_publication.cpp  track_publication.h  video_track.h
src/core/version/: version.h
test/: CMakeLists.txt
test/cpp_utils/: CMakeLists.txt  main.cpp
vcpkg-ports/abseil/: fix-cxx-standard-2.patch  fix-cxx-standard.patch  portfile.cmake  vcpkg.json
